# src/models/comment.js
@@ -2,11 +2,14 @@ const { DataTypes } = require("sequelize")
 const sequelize = require("../config/database")
 
 const Comment = sequelize.define("Comment", {
-    content: {
+    contenido: {
         type: DataTypes.TEXT,
-        allowNull: false
+        allowNull: false,
+        validate: {
+            notEmpty: true,
+            len: [1, 500]
+        }
     },
-
     visible: {
         type: DataTypes.BOOLEAN,
         defaultValue: true
